Fix long links wrapping

--- a/themes/hugo-base/assets/css/markdown.css
+++ b/themes/hugo-base/assets/css/markdown.css
@@ -71,6 +71,7 @@
 }
 
 .markdown a {
+  word-break: break-word;
   text-decoration: underline;
 }
 
